2012-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/testRcppModule/src/rcpp_module.cpp: added more
	comments, added copyright header, corrected output of example
	functions by not escaping "backslash-n" twice
	* inst/unitTests/testRcppModule/src/stdVector.cpp: added some
	comments, added copyright header
	* inst/unitTests/testRcppModule/src/Num.cpp: Idem

2012-05-13  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/iostream/Rostream.h: Added Rstreambuf.h include
	as per rcpp-devel discussion with Alexey Stukalov

2012-05-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Expanded R CMD SHLIB discussion
	after suggested changes from Søren Højsgaard; also expanded compiler
	section a little mentioning clang/clang++ and icc.

2012-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/Environment.cpp: Move one default argument to Environment.h
	* src/Function.cpp: Move one default argument to Function.h
	* inst/THANKS: Thanks to Anirban Mukherjee for these two changes

2012-04-28  John M Chambers  <jmc@r-project.org>

	* R/RcppClass.R: use globalVariables() from R 2.15.1 (with exists()
	test to no break older versions) to declare C++ fields and methods
	* inst/unitTests/testRcppClass/R/load.R: test use

2012-04-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/debugging.cpp: Expanded 'if defined()' test to included Cygwin
	thanks to a patch submitted by Dario Buttari

2012-04-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/Evaluator.cpp: errorOccuredSym never used and commented out

2012-04-18  John M Chambers  <jmc@r-project.org>

	* R/RcppClass.R: New version of setRcppClass, allowing R classes to
	extend C++ classes used via Rcpp modules
	* R/loadModule.R: New function, replaces uses of .onLoad()
	* man/*: Added/updated corresponding documentation

2012-04-07  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/Vector.h: bug fix. reported on Rcpp-devel